--- a/ClinicaWebApp/Views/Recepcionista/listarMedicos.cshtml
+++ b/ClinicaWebApp/Views/Recepcionista/listarMedicos.cshtml
@@ -9,7 +9,9 @@
 <hr>
 
 <p>
-    <a asp-action="listarMedicosPDF">Exportar registros a PDF</a>
+    <a asp-action="listarMedicosPDF" style="color: red">
+        <i class="fas fa-file-pdf"></i> Exportar a PDF
+    </a>
 </p>
 
 <div class="card shadow mb-4">
