--- a/ClinicaWebApp/Views/Recepcionista/NuevoPaciente.cshtml
+++ b/ClinicaWebApp/Views/Recepcionista/NuevoPaciente.cshtml
@@ -49,7 +49,7 @@
                 <span asp-validation-for="ide_doc" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary"/>
+                <input type="submit" value="Confirmar" class="btn btn-primary"/>
             </div>
         </form>
     </div>
