--- a/ClinicaWebApp/Views/Recepcionista/listarPacientes.cshtml
+++ b/ClinicaWebApp/Views/Recepcionista/listarPacientes.cshtml
@@ -9,7 +9,9 @@
 <hr/>
 
 <p>
-    <a asp-action="listarPacientesPDF">Exportar registros a PDF</a>
+    <a asp-action="listarPacientesPDF" style="color: red">
+        <i class="fas fa-file-pdf"></i> Exportar a PDF
+    </a>
 </p>
 
 <div class="card shadow mb-4">
