--- a/ClinicaWebApp/Views/Recepcionista/NuevoPaciente.cshtml
+++ b/ClinicaWebApp/Views/Recepcionista/NuevoPaciente.cshtml
@@ -15,22 +15,22 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="cor_usr" class="control-label"></label>
-                <input asp-for="cor_usr" class="form-control"/>
+                <input asp-for="cor_usr" class="form-control" type="email" maxlength="100" minlength="8"/>
                 <span asp-validation-for="cor_usr" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="pwd_usr" class="control-label"></label>
-                <input asp-for="pwd_usr" class="form-control"/>
+                <input asp-for="pwd_usr" class="form-control" maxlength="150" minlength="8"/>
                 <span asp-validation-for="pwd_usr" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="nom_usr" class="control-label"></label>
-                <input asp-for="nom_usr" class="form-control"/>
+                <input asp-for="nom_usr" class="form-control" maxlength="100" minlength="8"/>
                 <span asp-validation-for="nom_usr" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ape_usr" class="control-label"></label>
-                <input asp-for="ape_usr" class="form-control"/>
+                <input asp-for="ape_usr" class="form-control" maxlength="100" minlength="8"/>
                 <span asp-validation-for="ape_usr" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="num_doc" class="control-label"></label>
-                <input asp-for="num_doc" class="form-control"/>
+                <input asp-for="num_doc" class="form-control" maxlength="12" minlength="8"/>
                 <span asp-validation-for="num_doc" class="text-danger"></span>
             </div>
             <div class="form-group">
