--- a/ClinicaWebApp/Views/Paciente/listaCitaPorPaciente.cshtml
+++ b/ClinicaWebApp/Views/Paciente/listaCitaPorPaciente.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_LayoutPaciente.cshtml";
 }
 
+<a class="btn btn-primary mb-2" asp-controller="Pago" asp-action="Crear">Crear Cita</a>
+
 <div class="card shadow mb-4">
 
     <div class="card-header py-3">
