--- a/ClinicaWebApp/Views/Pago/Crear.cshtml
+++ b/ClinicaWebApp/Views/Pago/Crear.cshtml
@@ -2,20 +2,17 @@
 
 @{
     ViewData["Title"] = "Crear";
-    Layout = "~/Views/Shared/_LayoutRecepcionista.cshtml";
+    Layout = "~/Views/Shared/_LayoutPaciente.cshtml";
+    var pacienteId = Context.Session.GetInt32("PacienteId");
 }
 
-<h1>Ingresar Pago</h1>
-<hr />
+<h1>Ingresar Datos de Pago</h1>
+<hr/>
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Crear" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="HoraPago" class="control-label"></label>
-                <input asp-for="HoraPago" class="form-control" />
-                <span asp-validation-for="HoraPago" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="MontoPago" class="control-label"></label>
                 <input asp-for="MontoPago" class="form-control" value="50" readonly/>
@@ -23,72 +20,31 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoPago" class="control-label"></label>
-                @* <input asp-for="TipoPago" class="form-control" /> *@
                 @Html.DropDownListFor(model => model.TipoPago,
-                         (SelectList)ViewBag.tipoPagos, "(Seleccione el Paciente)",
-                         new { @class = "form-select custom-select", @id = "tipoPagoSelect" })
+                    (SelectList)ViewBag.tipoPagos, "(Seleccione el Paciente)",
+                    new { @class = "form-select custom-select", @id = "tipoPagoSelect" })
                 <span asp-validation-for="TipoPago" class="text-danger"></span>
             </div>
             <div id="extraInputContainer" style="margin-top: 10px;"></div>
             <div id="extraFields" class="mt-3"></div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Pagar" class="btn btn-primary"/>
+                <a asp-controller="Paciente" asp-action="listaCitaPorPaciente" asp-route-ide_usr="@pacienteId"
+                   class="btn btn-secondary me-2">
+                    <i class="fas fa-arrow-left"></i> Regresar
+                </a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-controller="Cita" asp-action="ListadoCitas" class="btn btn-warning">Back to List</a>
-</div>
-
 @section Scripts {
-    @* 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-             const select = document.getElementById("tipoPagoSelect");
-             const container = document.getElementById("extraInputContainer");
-
-            select.addEventListener("change", function () {
-
-                 const selectedOption = this.options[this.selectedIndex].text;
-                 container.innerHTML = ""; // Limpiar cualquier input anterior
-
-                 let placeholder = "";
-
-                 switch (selectedOption.toLowerCase()) {
-                     case "visa":
-                     case "mastercard":
-                     case "amex":
-                     case "dinnersclub":
-                         placeholder = "Número de tarjeta";
-                         break;
-                     case "yape":
-                     case "plin":
-                         placeholder = "Número de teléfono";
-                         break;
-                     case "efectivo":
-                         placeholder = "Monto en efectivo entregado";
-                         break;
-                     default:
-                         return; // No mostrar nada
-                 }
-
-                 const input = document.createElement("input");
-                 input.type = "text";
-                 input.className = "form-control mt-2";
-                 input.placeholder = placeholder;
-                 input.disabled = false; // opcional: lo puedes dejar en readonly si prefieres
-
-                 container.appendChild(input);
-            
-        });
-    </script> *@
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const select = document.getElementById("tipoPagoSelect");
             const extraFields = document.getElementById("extraFields");
             console.log("Script llamado")
+
             function updateFields() {
                 const selected = select.options[select.selectedIndex].text.trim();
                 extraFields.innerHTML = ""; // Limpiar campos previos
