estadisticas de citas y pacientes y gestion de pacientes para medico

--- a/ClinicaWebApp/Views/Medico/Index.cshtml
+++ b/ClinicaWebApp/Views/Medico/Index.cshtml
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="card-footer bg-transparent border-top-0">
-                <a href="@Url.Action("Pacientes", "Medico")" class="small text-success stretched-link">
+                <a href="@Url.Action("listaPacientePorMedicos", "Medico", new { ide_usr = medicoId })" class="small text-success stretched-link">
                     Ver listado <i class="fas fa-arrow-right ml-1"></i>
                 </a>
             </div>
