--- a/ClinicaWebApp/Views/Shared/_LayoutMedico.cshtml
+++ b/ClinicaWebApp/Views/Shared/_LayoutMedico.cshtml
@@ -66,6 +66,18 @@
                 </a>
             </li>
 
+            <!-- Divider -->
+            <hr class="sidebar-divider" />
+
+            <div class="sidebar-heading">Gestión de Pacientes:</div>
+
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("listaPacientePorMedicos", "Medico", new { ide_usr = medicoId })">
+                    <i class="fas fa-fw fa-user-injured"></i>
+                    <span>Pacientes Asignados</span>
+                </a>
+            </li>
+
 
 
             <!-- Divider -->
