--- a/ClinicaWebApp/Views/Cita/nuevaCita.cshtml
+++ b/ClinicaWebApp/Views/Cita/nuevaCita.cshtml
@@ -31,13 +31,11 @@
                 <span asp-validation-for="IdMedico" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdPaciente" class="control-label"></label>
-                <input asp-for="IdPaciente" class="form-control" readonly style="display: none"/>
+                <input asp-for="IdPaciente" class="form-control" readonly hidden="hidden"/>
                 <span asp-validation-for="IdPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdPago" class="control-label"></label>
-                <input asp-for="IdPago" class="form-control" readonly style="display:none;"/>
+                <input asp-for="IdPago" class="form-control" readonly hidden="hidden"/>
                 <span asp-validation-for="IdPago" class="text-danger"></span>
             </div>
             <div class="form-group">
