Added Register Page and Styles for viewDetails

--- a/ClinicaWebApp/Views/Cita/DetalleCita.cshtml
+++ b/ClinicaWebApp/Views/Cita/DetalleCita.cshtml
@@ -16,10 +16,11 @@
     }
 }
 
-<h1>Detalle De la Cita Medica</h1>
+<div class="bg-white border rounded p-3 m-1" style="width: fit-content">
+    <h1>Detalle De la Cita Medica</h1>
+</div>
 
-<div>
-    <hr/>
+<div class="bg-white border rounded p-3 m-1" style="width: fit-content">
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdCita)
