--- a/ClinicaWebApp/Views/Paciente/DetallePaciente.cshtml
+++ b/ClinicaWebApp/Views/Paciente/DetallePaciente.cshtml
@@ -19,9 +19,12 @@
     }
 }
 
-<h1>Detalle de Paciente</h1>
 
-<div>
+<div class="bg-white border rounded p-3 m-1" style="width: fit-content">
+    <h1>Detalle de Paciente</h1>
+</div>
+
+<div class="bg-white border rounded p-3 m-1" style="width: fit-content">
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdPaciente)
