--- a/ClinicaWebApp/Views/Login/Index.cshtml
+++ b/ClinicaWebApp/Views/Login/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutPrincipal.cshtml";
 }
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
 
 <div class="container mt-5">
     <div class="row justify-content-center">
@@ -23,13 +23,19 @@
                     <form asp-controller="Login" asp-action="Index" method="post">
                         <div class="form-group mb-3">
                             <label for="uid">Correo electrónico</label>
-                            <input type="email" class="form-control" id="uid" name="uid" required />
+                            <input type="email" class="form-control" id="uid" name="uid"/>
                         </div>
                         <div class="form-group mb-4">
                             <label for="pwd">Contraseña</label>
-                            <input type="password" class="form-control" id="pwd" name="pwd" required />
+                            <input type="password" class="form-control" id="pwd" name="pwd"/>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+                    </form>
+
+                    <br/>
+
+                    <form asp-controller="Login" asp-action="Registro" method="get">
+                        <button type="submit" class="btn btn-secondary w-100">Registrarse</button>
                     </form>
                 </div>
             </div>
