--- a/ClinicaWebApp/Views/Pago/DetallePago.cshtml
+++ b/ClinicaWebApp/Views/Pago/DetallePago.cshtml
@@ -16,9 +16,11 @@
     }
 }
 
-<h1>Detalle de Pago</h1>
+<div class="bg-white border rounded p-3 m-1" style="width: fit-content">
+    <h1>Detalle de Pago</h1>
+</div>
 
-<div>
+<div class="bg-white border rounded p-3 m-1" style="width: fit-content">
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdPago)
