--- a/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
+++ b/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
@@ -52,7 +52,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="@Url.Action("Index","Cita")">
+                <a class="nav-link" href="@Url.Action("Index","Recepcionista")">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
