--- a/ClinicaWebApp/Views/Shared/_LayoutPaciente.cshtml
+++ b/ClinicaWebApp/Views/Shared/_LayoutPaciente.cshtml
@@ -49,7 +49,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-            <a class="nav-link" href="@Url.Action("Index", "Medico")">
+            <a class="nav-link" href="@Url.Action("Index", "Paciente", new { id = pacienteId})">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span>
             </a>
